@@ -64,7 +64,7 @@ public abstract class CandidateMatcher<T extends QueryMatch> {
    * @param metadata the query metadata
    * @throws IOException on IO errors
    */
-  protected abstract void matchQuery(String queryId, Query matchQuery, Map<String, String> metadata)
+  public abstract void matchQuery(String queryId, Query matchQuery, Map<String, String> metadata)
       throws IOException;
 
   /**
@@ -95,14 +95,14 @@ public abstract class CandidateMatcher<T extends QueryMatch> {
   public abstract T resolve(T match1, T match2);
 
   /** Called by the Monitor if running a query throws an Exception */
-  void reportError(String queryId, Exception e) {
+  public void reportError(String queryId, Exception e) {
     this.errors.put(queryId, e);
   }
 
   /**
    * @return the matches from this matcher
    */
-  final MultiMatchingQueries<T> finish(long buildTime, int queryCount) {
+  public final MultiMatchingQueries<T> finish(long buildTime, int queryCount) {
     doFinish();
     this.searchTime =
         TimeUnit.MILLISECONDS.convert(System.nanoTime() - searchTime, TimeUnit.NANOSECONDS);
