@@ -31,8 +31,8 @@ public class ExplainingMatch extends QueryMatch {
       searcher ->
           new CandidateMatcher<ExplainingMatch>(searcher) {
             @Override
-            protected void matchQuery(
-                String queryId, Query matchQuery, Map<String, String> metadata) throws IOException {
+            public void matchQuery(String queryId, Query matchQuery, Map<String, String> metadata)
+                throws IOException {
               int maxDocs = searcher.getIndexReader().maxDoc();
               for (int i = 0; i < maxDocs; i++) {
                 Explanation explanation = searcher.explain(matchQuery, i);
