@@ -39,7 +39,7 @@ public interface QueryTimeListener {
       CandidateMatcher<T> matcher = factory.createMatcher(searcher);
       return new CandidateMatcher<T>(searcher) {
         @Override
-        protected void matchQuery(String queryId, Query matchQuery, Map<String, String> metadata)
+        public void matchQuery(String queryId, Query matchQuery, Map<String, String> metadata)
             throws IOException {
           long t = System.nanoTime();
           matcher.matchQuery(queryId, matchQuery, metadata);
