@@ -178,7 +178,7 @@ public class TestMonitor extends MonitorTestBase {
           docs ->
               new CandidateMatcher<QueryMatch>(docs) {
                 @Override
-                protected void matchQuery(
+                public void matchQuery(
                     String queryId, Query matchQuery, Map<String, String> metadata) {
                   assertEquals("value", metadata.get("key"));
                 }
